@@ -57,14 +57,18 @@ class DummyTransport(Transport):
         pass
 
 
-def test_app_info(elasticapm_client):
-    app_info = elasticapm_client.get_service_info()
-    assert app_info['name'] == elasticapm_client.config.service_name
-    assert app_info['language'] == {
+@pytest.mark.parametrize('elasticapm_client', [
+    {'environment': 'production'}
+], indirect=True)
+def test_service_info(elasticapm_client):
+    service_info = elasticapm_client.get_service_info()
+    assert service_info['name'] == elasticapm_client.config.service_name
+    assert service_info['environment'] == elasticapm_client.config.environment == 'production'
+    assert service_info['language'] == {
         'name': 'python',
         'version': platform.python_version()
     }
-    assert app_info['agent']['name'] == 'python'
+    assert service_info['agent']['name'] == 'python'
 
 
 def test_system_info(elasticapm_client):
